Fix alignment of form text input

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -136,6 +136,8 @@ legend {
   color: var(--marine-blue);
   font-weight: 700;
 
+  text-align: left;
+
   &::placeholder {
     color: var(--cool-gray);
   }
